@@ -119,6 +119,7 @@ production.
 * (bug 33456) Show $wgQueryCacheLimit on cached query pages.
 * (bug 10574) Add an option to allow all pages to be exported by Special:Export.
 * Use mw.jqueryMsg parser for message parsing to support PLURAL and GENDER
+* (bug 29309) allow CSS class per tooltip (tipsy)
 
 === Bug fixes in 1.19 ===
 * $wgUploadNavigationUrl should be used for file redlinks if.
